--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
+    "classnames": "^2.3.2",
+    "focus-trap-react": "^10.0.2",
     "framer-motion": "^4.1.17",
     "react": "17.0.2",
     "react-apexcharts": "^1.4.0",
@@ -32,6 +34,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
+    "reactjs-popup": "^2.0.5",
+    "sass": "^1.57.1",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "2.0.2",
     "web-vitals": "^1.1.2"
